Order all names in orgs by first name A-Z

--- a/app/views/v5/l2/users/view/capita.html
+++ b/app/views/v5/l2/users/view/capita.html
@@ -43,9 +43,27 @@
             {% endif %}
 
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
+                <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
+                <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
+                <td class="govuk-table__cell">Invite sent</td>
+            </tr>
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
                 <td class="govuk-table__cell">david.batty@capita.co.uk</td>
                 <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -61,27 +79,15 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
+                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
-                <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
-                <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
+                <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -91,15 +97,9 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
-                <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
     </table>
