--- a/app/views/v5/l2/users/view/croydon-2.html
+++ b/app/views/v5/l2/users/view/croydon-2.html
@@ -31,21 +31,15 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Manny Cussins</a></th>
-                <td class="govuk-table__cell">m.cussins@croydon.gov.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Albert Morris</a></th>
-                <td class="govuk-table__cell">a.morris@croydon.gov.uk</td>
-                <td class="govuk-table__cell">Invite sent</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Harry Reynolds</a></th>
-                <td class="govuk-table__cell">h.reynolds@croydon.gov.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Massimo Cellino</a></th>
+                <td class="govuk-table__cell">m.cellino@croydon.gov.uk</td>
                 <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Ridsdale</a></th>
+                <td class="govuk-table__cell">p.ridsdale@croydon.gov.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -55,8 +49,8 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Alf Masser</a></th>
-                <td class="govuk-table__cell">a.masser@croydon.gov.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Trevor Birch</a></th>
+                <td class="govuk-table__cell">t.birch@croydon.gov.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
