--- a/app/views/v5/l2/users/view/g4s-2.html
+++ b/app/views/v5/l2/users/view/g4s-2.html
@@ -31,9 +31,15 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
-                <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
+                <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
+                <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -49,15 +55,9 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dean Macey</a></th>
-                <td class="govuk-table__cell">dean.macey@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ali Hamidi</a></th>
-                <td class="govuk-table__cell">ali.hamidi@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
+                <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
             </tr>
         </tbody>
     </table>
