--- a/app/views/v5/l2/users/view/g4s.html
+++ b/app/views/v5/l2/users/view/g4s.html
@@ -43,50 +43,14 @@
             {% endif %}
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
-                <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
-                <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
-                <td class="govuk-table__cell">Invite sent</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ali Hamidi</a></th>
+                <td class="govuk-table__cell">ali.hamidi@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">April Vokey</a></th>
                 <td class="govuk-table__cell">april.vokey@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
-                <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Paul Young</a></th>
-                <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
-                <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
-                <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Neville Fickling</a></th>
-                <td class="govuk-table__cell">neville.fickling@g4s.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
@@ -97,9 +61,45 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Church</a></th>
-                <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bruce Sandison</a></th>
+                <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Dean Macey</a></th>
+                <td class="govuk-table__cell">dean.macey@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jeremy Wade</a></th>
+                <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Wilson</a></th>
+                <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Marina Gibson</a></th>
+                <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Matt Hayes</a></th>
+                <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
+                <td class="govuk-table__cell">Access expired</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mick Brown</a></th>
+                <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
         </tbody>
     </table>
