--- a/app/views/v5/l2/users/view/remploy-2.html
+++ b/app/views/v5/l2/users/view/remploy-2.html
@@ -31,8 +31,44 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
+                <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
+                <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
+                <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
+                <td class="govuk-table__cell">imre.varadi@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Janet Sheridan</a></th>
                 <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
+                <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
+
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
+                <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
@@ -43,51 +79,15 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
-                <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Nigella Worthington</a></th>
                 <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
-                <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
+                <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
-                <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
-                <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
-                <td class="govuk-table__cell">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
-                <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
-                <td class="govuk-table__cell">chris.kamara@remploy.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Imre Varadi</a></th>
-                <td class="govuk-table__cell">imre.varadi@remploy.co.uk</td>
-                <td class="govuk-table__cell ">Active</td>
             </tr>
         </tbody>
     </table>
