--- a/app/views/v5/l2/users/view/capita-2.html
+++ b/app/views/v5/l2/users/view/capita-2.html
@@ -31,20 +31,20 @@
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
+                <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
-                <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
-                <td class="govuk-table__cell">Invite sent</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
+                <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
-                <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
+                <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
