--- a/app/views/v5/l2/users/view/remploy-3.html
+++ b/app/views/v5/l2/users/view/remploy-3.html
@@ -37,14 +37,14 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
-                <td class="govuk-table__cell">david.hopkin@remploy.co.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Robert Molenaar</a></th>
+                <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Deane</a></th>
-                <td class="govuk-table__cell">brian.deane@remploy.co.uk</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
+                <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
