--- a/app/views/v5/l2/users/view/remploy.html
+++ b/app/views/v5/l2/users/view/remploy.html
@@ -22,84 +22,84 @@
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-            <th scope="col" class="govuk-table__header">Status</th>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+                <th scope="col" class="govuk-table__header">Status</th>
+            </tr>
         </thead>
 
         <tbody class="govuk-table__body">
-        {% if data['organisation-name'] == 'Remploy' %}
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header">
-                <a href="single" class="govuk-link">
-                    {{ data['user-first-name'] }} {{ data['user-last-name'] }}
-                </a>
-            </th>
-            <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-            <td class="govuk-table__cell">Pending activation</td>
-        </tr>
-        {% endif %}
+            {% if data['organisation-name'] == 'Remploy' %}
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">
+                        <a href="single" class="govuk-link">
+                            {{ data['user-first-name'] }} {{ data['user-last-name'] }}
+                        </a>
+                    </th>
+                    <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
+                    <td class="govuk-table__cell">Pending activation</td>
+                </tr>
+            {% endif %}
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
-            <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
+                <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
-            <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
+                <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
-            <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Brian Deane</a></th>
+                <td class="govuk-table__cell">brian.deane@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
-            <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+                <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
-            <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+                <td class="govuk-table__cell">carl.shutt2@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
-            <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Catherine Palmer</a></th>
+                <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
-            <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Kamara</a></th>
+                <td class="govuk-table__cell">chris.kamara@remploy.co.uk</td>
+                <td class="govuk-table__cell ">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
-            <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Hopkin</a></th>
+                <td class="govuk-table__cell">david.hopkin@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
-            <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
-            <td class="govuk-table__cell ">Active</td>
-        </tr>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Rocastle</a></th>
+                <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
+            </tr>
 
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
-            <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
-            <td class="govuk-table__cell">Active</td>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David White</a></th>
+                <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
     </table>
